@@ -37,8 +37,8 @@ function FS.writefile(filename, data, options)
 end
 
 local M = require 'lib'
-assert(#M.cpath ~= 0)
-M.cpath = {'<dir>/?.so', '<dir>/?.dll'}
+assert(#M.cpath_form ~= 0)
+M.cpath_form = {'<dir>/?.so', '<dir>/?.dll'}
 
 local function checkeq(a, b, e)
   if a ~= b then error(
@@ -93,18 +93,18 @@ checkeq(package.path, P'foo/?.lua;foo/?/init.lua')
 
 -- test complex
 package.cpath = '?.z'
-M {before='a', after={'b','c'}, cpath='<dir>/?.dllx'}
+M {before='a', after={'b','c'}, cpath_form='<dir>/?.dllx'}
 checkeq(package.cpath, P'a/?.dllx;?.z;b/?.dllx;c/?.dllx')
 
 -- test newrequire
 FS.writefile('tmp135.x', 'return {}')
-M.path = {'<dir>/?.x'}
+M.path_form = {'<dir>/?.x'}
 local require2 = M.newrequire('.')
 local X = require2 'tmp135'
 assert(X)
 os.remove 'tmp135.x'
 package.path = '?.lua'
-local require2 = M.newrequire{before='a', after={'b','c'}, path='<dir>/?.luac'}
+local require2 = M.newrequire{before='a', after={'b','c'}, path_form='<dir>/?.luac'}
 local path
 package.preload._lib_debug = function()
   path = package.path
@@ -117,7 +117,7 @@ package.loaded.findbin = nil
 arg[0] = 'a/b/c.lua'  -- trick findbin
 if pcall(require, 'findbin') then
   package.path = ''; package.cpath = ''
-  M.path =  {'<dir>/?.lua', '<dir>/?/init.lua'}
+  M.path_form =  {'<dir>/?.lua', '<dir>/?/init.lua'}
   M.before('<bin>/../foo')
   checkeq(package.path, P'a/b/../foo/?.lua;a/b/../foo/?/init.lua')
 else
